--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "baseUrl": "./",
-    "typeRoots": [
-      "src/@types",
-      "./node_modules/@types"
-    ],
+    "typeRoots": ["src/@types", "./node_modules/@types"],
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
